--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,18 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
+		<!-- JSTL (Jakarta Standard Tag Library) -->
+		
+		<dependency>
+			<groupId>org.glassfish.web</groupId>
+			<artifactId>jakarta.servlet.jsp.jstl</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>jakarta.servlet.jsp.jstl</groupId>
+			<artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
+		</dependency>
+	
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -51,11 +63,7 @@
 	      <scope>provided</scope>
     	</dependency>
 
-	    <dependency>
-		    <groupId>javax.servlet</groupId>
-		    <artifactId>jstl</artifactId>
-		    <version>1.2</version>
-		</dependency>
+	   
 
 		
 	</dependencies>
