--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,12 @@
 spring.mvc.view.prefix: /WEB-INF/vistas/
 spring.mvc.view.suffix: .jsp
+
+#JDBC
+spring.datasource.url=jdbc:mysql://localhost:3306/musicamvcspring
+spring.datasource.username=root
+spring.datasource.password=1234
+
+#JPA
+spring.sql.init.mode=always
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
